# pdf-burger

./: README.md  pyproject.toml
pdf_burger/: __init__.py  cli.py  collector.py  console.py  logger.py  merger.py  monads.py
tests/: conftest.py  test_cli.py  test_collector.py  test_merger.py  test_monads.py
