[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-burger"
version = "0.2.0"
description = "Merge multiple PDF files and directories into one."
requires-python = ">=3.10"
dependencies = ["pypdf>=4.0"]

[project.scripts]
pdf-burger = "pdf_burger.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
